device.  We have determined that the data is in fact written by the
"epson" process, but it's never getting to the printer.

================================================================

III) MAJOR CHANGES FROM PREVIOUS RELEASES

* Changes from 5.2.9

  1) New printers supported in this release:

     - Epson inkjets:

       EPSON Stylus TX125

     - Canon inkjets:

       Canon PIXMA MG2200 (EXPERIMENTAL)
       Canon PIXMA MG3200 (EXPERIMENTAL)
       Canon PIXMA MG4200 (EXPERIMENTAL)
       Canon PIXMA MG5400 (EXPERIMENTAL)
       Canon PIXMA MG6300 (EXPERIMENTAL)

  2) The following Canon printer models were not added, as they cannot
     currently be supported, even experimentally, owing to an as-yet
     unknown command format or other issues:

       Canon PIXMA PRO-10  *1
       Canon PIXMA PRO-100 *1
       Canon SELPHY CP900  *2

       *1: protocol is supported but inks used are not yet supported
       *2: requires special communication protocol

* Changes from 5.2.8

  1) This release fixes an inappropriate change to the internal
     library version number (.soname or equivalent) made in 5.2.8.
     All distributors should immediately apply this update to their
     distributions to avoid other software linking against
     libgutenprint breaking.

  2) Duplicate Transparency entries in the media types for Canon
     iP4100 and similar printers have been removed.

  3) The range of fine position adjustment of CD media has been
     increased for Epson printers.

  4) The German translation has been updated.

  5) Canon PIXMA Pro9000 plain media high quality mode bug fix.

* Changes from 5.2.7

  1) The Canon driver has been significantly overhauled for this
     release, and output (and in some cases functionality) may be
     significantly different from previous releases.  We expect to
     perform further work in future releases.  Specific changes
     include:

     * All known combinations of offered modes now work in CUPS.