@@ -1437,6 +1437,38 @@ static const canon_inkset_t canon_13_C3M3Y2K2k3photo_c_inkset[] = {
         {0,0.0,NULL},
 };
 
+static const canon_inkset_t canon_13_C3M3Y2K3k3_c_inkset[] = {
+	{'C',1.0,&canon_2b_3l_c_ink},
+	{'M',1.0,&canon_2b_3l_c_ink},
+	{'Y',1.0,&canon_1b_2l_ink},
+	{'K',1.0,&canon_2b_3l_c_ink},
+	{0,0.0,NULL},
+	{0,0.0,NULL},
+	{'k',0.0,&canon_2b_3l_ink},/* swapped y and k */
+	{0,0.0,NULL},
+	{0,0.0,NULL},
+	{0,0.0,NULL},
+	{0,0.0,NULL},
+	{0,0.0,NULL},
+	{0,0.0,NULL},
+};
+
+static const canon_inkset_t canon_13_C3M3Y2K3k3on_c_inkset[] = {
+	{'C',1.0,&canon_2b_3l_c_ink},
+	{'M',1.0,&canon_2b_3l_c_ink},
+	{'Y',1.0,&canon_1b_2l_ink},
+	{'K',1.0,&canon_2b_3l_c_ink},
+	{0,0.0,NULL},
+	{0,0.0,NULL},
+	{'k',1.0,&canon_2b_3l_ink},/* swapped y and k */
+	{0,0.0,NULL},
+	{0,0.0,NULL},
+	{0,0.0,NULL},
+	{0,0.0,NULL},
+	{0,0.0,NULL},
+	{0,0.0,NULL},
+};
+
 static const canon_inkset_t canon_13_C3M3Y3k3c3m3_inkset[] = {
 	{'C',1.0,&canon_2b_3l_ink},
 	{'M',1.0,&canon_2b_3l_ink},
