@@ -1818,6 +1818,22 @@ static const canon_cap_t canon_model_capabilities[] =
     NULL,
     iP4500_channel_order
   },
+  { /* Canon PIXMA iP7200 CD-R tray J */
+    "PIXMA iP7200", 3,          /*model, model_id*/
+    INCH(17/2), 1917,       /* max paper width and height */ /* no linux driver to check yet */
+    10, 10, 9, 15,    /*border_left, border_right, border_top, border_bottom */
+    &canon_PIXMA_MG5400_slotlist, /* iP7200 uses ESC (r 0x68 command for CD tray only */
+    CANON_CAP_STD0|CANON_CAP_DUPLEX|CANON_CAP_r|CANON_CAP_rr|CANON_CAP_px|CANON_CAP_I|CANON_CAP_P|CANON_CAP_XML|CANON_CAP_BORDERLESS,0,
+    3,9, /* ESC (l and (P command lengths */
+    control_cmd_PIXMA_MG5300,  /* features Uses ESC (r only for CD media */
+    &canon_PIXMA_iP7200_modelist,
+    &canon_PIXMA_MG5400_paperlist,
+    &canon_PIXMA_iP7200_modeuselist,
+    NULL,
+    NULL,
+    NULL,
+    iP4500_channel_order
+  },
   { /* Canon PIXMA iX4000 --- like iX5000 but includes Transparency and ud1 mode is different */
     "PIXMA iX4000", 3,          /*model, model_id*/
     933, INCH(23),       /* max paper width and height */       /* from MacOSX driver */
